--- a/src/components/Item/cardItem.css
+++ b/src/components/Item/cardItem.css
@@ -71,6 +71,7 @@
     color: white;
     font-size: 20px;
     border: none;
+    cursor: pointer;
 }
 
 .buttons #detalles:hover {
@@ -85,6 +86,7 @@
     border: none;
     padding: 5px;
     margin: 10px;
+    cursor: pointer;
 }
 
 .buttons #AddCart:hover {
