--- a/src/components/Navbar/itemCart.css
+++ b/src/components/Navbar/itemCart.css
@@ -18,6 +18,12 @@
     height: 40px;
     width: 40px;
     border-radius: 50%;
+    color: white;
+    cursor: pointer;
+}
+
+.itemCart .delete:hover {
+    background-color: #4c00d1;
 }
 
 /* imagen */
